--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,16 @@ stats.json
 .DS_Store
 npm-debug.log
 .idea
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+
+.vscode
