--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "@babel/polyfill": "7.4.3",
     "aws-amplify": "^1.1.27",
+    "aws-amplify-react": "^2.3.7",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
@@ -90,7 +91,7 @@
     "redux": "4.0.1",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
