--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "aws-amplify": "^1.1.27",
     "aws-amplify-react": "^2.3.7",
     "chalk": "^2.4.2",
